# controllers/index.js
@@ -2,9 +2,7 @@ const Car = require('../models/index');
 
 // Handle index actions
 exports.get = (req, res) => {
-    console.log('index');
     Car.get((err, cars) => {
-        console.log(err, cars);
         if (err) {
             res.status(400)
                 .json({
@@ -45,9 +43,9 @@ exports.post = async (req, res) => {
     });
 };
 
-// Handle create car
+// Handle edit car
 exports.put = async (req, res) => {
-    const { id, make, year, model, fuelType, trim, colors } = req.body;
+    const { id } = req.params;
     Car.findById(id, (err, car) => {
         if (err) {
             res.status(400)
@@ -56,12 +54,9 @@ exports.put = async (req, res) => {
                     message: err,
                 });
         } else {
-            car.make = make;
-            car.year = year;
-            car.model = model;
-            car.fuelType = fuelType;
-            car.trim = trim;
-            car.colors = colors;
+            for( let b in req.body ){
+                car[b] = req.body[b];
+            }
             car.save(err => {
                 if (err) {
                     res.status(400)
@@ -79,9 +74,40 @@ exports.put = async (req, res) => {
     });
 };
 
-// Handle create car
+// Handle patch car
+exports.patch = async (req, res) => {
+    const { id } = req.params;
+    Car.findById(id, (err, car) => {
+        if (err) {
+            res.status(400)
+                .json({
+                    success: false,
+                    message: err,
+                });
+        } else {
+            for( let b in req.body ){
+                car[b] = req.body[b];
+            }
+            car.save(err => {
+                if (err) {
+                    res.status(400)
+                        .json({
+                            success: false,
+                            message: err,
+                        });
+                }
+                res.status(200)
+                    .json({
+                        success: true,
+                    });
+            });
+        }     
+    });
+};
+
+// Handle delete car
 exports.delete = async (req, res) => {
-    const { id } = req.body;
+    const { id } = req.params;
     Car.findById(id, (err, car) => {
         if (err) {
             res.status(400)
