# swagger.json
@@ -1,194 +1,210 @@
-
 {
-    "swagger": "2.0",
-    "info": {
+  "swagger": "2.0",
+  "info": {
     "description": "Nodejs API",
     "version": "1.0.0",
-    "title": "Noderestaurant API"
-},
-    "host": "locahost:5000",
-    "basePath": "/api",
-    "tags": [
-{
-  "name": "Order",
-  "description": "Everything about your orders"
-},
-{
-  "name": "Health",
-  "description": "Check your API memory consume"
-}
-],
-"schemes": [
-"https",
-"http"
-],
-"paths": {
-"/health": {
-  "get": {
-    "tags": [
-      "Health"
-    ],
-    "produces": [
-      "application/json"
-    ],
-    "parameters": [],
-    "responses": {
-      "200": {
-        "description": "successful operation"
-      }
-    }
-  }
-},
-"/order": {
-  "get": {
-    "tags": [
-      "Order"
-    ],
-    "summary": "Find all the orders",
-    "description": "Returns all the orders",
-    "produces": [
-      "application/json"
-    ],
-    "parameters": [],
-    "responses": {
-      "200": {
-        "description": "successful operation",
-        "schema": {
-          "$ref": "#/definitions/Order"
-        }
-      },
-      "400": {
-        "description": "error message"
-      }
-    },
-    "security": [
-      {
-        "api_key": []
-      }
-    ]
+    "title": "Car Test API"
   },
-  "post": {
-    "tags": [
-      "Order"
-    ],
-    "summary": "Add a new order to the restaurant",
-    "description": "",
-    "operationId": "addPet",
-    "consumes": [
-      "application/json"
-    ],
-    "produces": [
-      "application/json"
-    ],
-    "parameters": [
-      {
-        "in": "body",
-        "name": "body",
-        "description": "Items object that needs to be added to the store",
-        "required": true,
-        "schema": {
-          "$ref": "#/definitions/Order"
-        }
-      }
-    ],
-    "responses": {
-      "420": {
-        "description": "error message"
-      },
-      "422": {
-        "description": "Invalid items"
-      }
+  "host": "locahost:5000",
+  "basePath": "/api",
+  "tags": [
+    {
+      "name": "Car",
+      "description": "Everything about your car"
     }
-  }
-}
-},
-"securityDefinitions": {
-"petstore_auth": {
-  "type": "oauth2",
-  "authorizationUrl": "http://petstore.swagger.io/oauth/dialog",
-  "flow": "implicit",
-  "scopes": {
-    "write:pets": "modify pets in your account",
-    "read:pets": "read your pets"
-  }
-},
-"api_key": {
-  "type": "apiKey",
-  "name": "api_key",
-  "in": "header"
-}
-},
-"definitions": {
-"Order": {
-  "type": "object",
-  "properties": {
-    "id": {
-      "type": "integer",
-      "format": "int64"
-    },
-    "personalInfo": {
-      "type": "object",
-      "properties": {
-        "name": {
-          "type": "string"
-        },
-        "lastName": {
-          "type": "string"
-        },
-        "number": {
-          "type": "string"
-        }
-      }
-    },
-    "meals": {
-      "type": "array",
-      "items": {
-        "type": "object",
-        "example": [
-          {
-            "name": "test",
-            "price": 200
+  ],
+  "schemes": [
+    "https",
+    "http"
+  ],
+  "paths": {
+    "/": {
+      "get": {
+        "tags": [
+          "Car"
+        ],
+        "summary": "Find all the cars",
+        "description": "Returns all the cars",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/Car"
+            }
+          },
+          "400": {
+            "description": "error message"
           }
-        ]
+        }
+      },
+      "post": {
+        "tags": [
+          "Car"
+        ],
+        "summary": "Add a new car to the inventory",
+        "description": "",
+        "operationId": "addCar",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Items object that needs to be added to the store",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Car"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation"
+          },
+          "420": {
+            "description": "error message"
+          }
+        }
       }
     },
-    "totalCost": {
-      "type": "integer",
-      "format": "int32"
-    },
-    "email": {
-      "type": "string"
-    },
-    "address": {
-      "type": "string"
-    },
-    "location": {
+    "/{carId}": {
+      "put": {
+        "tags": [
+          "Car"
+        ],
+        "summary": "Edit the car by id",
+        "description": "Edit all the properties",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "carId",
+            "in": "path",
+            "description": "ID of car to return",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation"
+          },
+          "400": {
+            "description": "error message"
+          }
+        }
+      },
+      "patch": {
+        "tags": [
+          "Car"
+        ],
+        "summary": "Edit the car by id",
+        "description": "Edit all the properties",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "carId",
+            "in": "path",
+            "description": "ID of car to return",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation"
+          },
+          "400": {
+            "description": "error message"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Car"
+        ],
+        "summary": "Edit the car by id",
+        "description": "Edit all the properties",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "carId",
+            "in": "path",
+            "description": "ID of car to return",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation"
+          },
+          "400": {
+            "description": "error message"
+          }
+        }
+      }
+    }
+  },
+  "definitions": {
+    "Car": {
       "type": "object",
       "properties": {
-        "lat": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "make": {
           "type": "string"
         },
-        "lng": {
+        "year": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "model": {
+          "type": "string"
+        },
+        "fuelType": {
+          "type": "string"
+        },
+        "trim": {
+          "type": "string"
+        },
+        "colors": {
+          "type": "string"
+        }
+      }
+    },
+    "ApiResponse": {
+      "type": "object",
+      "properties": {
+        "code": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "success": {
+          "type": "boolean"
+        },
+        "message": {
           "type": "string"
         }
       }
     }
   }
-},
-"ApiResponse": {
-  "type": "object",
-  "properties": {
-    "code": {
-      "type": "integer",
-      "format": "int32"
-    },
-    "success": {
-      "type": "boolean"
-    },
-    "message": {
-      "type": "string"
-    }
-  }
-}
-}
 }
